[build-system]
requires = ["setuptools>=61.0", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-toolkit-josh"
version = "0.1.1"
description = "A Python package for causal inference methods including ATE estimation, propensity score methods, and meta-learners"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Josh", email = "joshcarbajal21@gmail.com"}
]
keywords = ["causal inference", "statistics", "machine learning", "treatment effects"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "lightgbm>=3.3.0",
    "patsy>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/joshcarbajal/causal_toolkit_josh"
Repository = "https://github.com/joshcarbajal/causal_toolkit_josh"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=causal_toolkit_josh --cov-report=term"
